adding pranata dukuh

--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ main {
   justify-content: center;
   align-items: center;
 }
+@media only screen and (max-width: 768px) {
+  .kataDukuh {
+    flex-direction: column;
+  }
+}
 .kataDukuh>div {
   padding: 0 10px;
 }
