tambah section(belum selesai)

--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ main {
 .tebing {
   background-image: url('images/IMG_1560.jpg');
 }
+.dancer {
+  background-image: url('images/IMG_20220713_124239.jpg');
+}
 
 .batas {
   background-image: url('images/batasdusunmid.jpg');
