--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
   background-position: top !important;
 }
 .tebingTutup {
-  background-image: url('images/WhatsApp\ Image\ 2022-08-03\ at\ 8.58.35\ PM.jpeg');
+  background-image: url('images/tebingTutup.jpeg');
 }
 
 .batas {
