--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  outline: 1px solid limegreen !important;
+  /* outline: 1px solid limegreen !important; */
   
 }
 
