--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ main {
   background-image: url('images/dukuhNgasemBackgroundNight.jpg');
   background-position: bottom !important;
 }
+.tentangKitaBG {
+  background-image: url('images/tentangkami/cocardKKN.jpg');
+}
 .batas h2 {
   font-family: 'EB Garamond', serif;
 }
