--- a/style.css
+++ b/style.css
@@ -94,13 +94,15 @@ main {
   text-indent: 40px;
 }
 .subunitNgasem {
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   height: auto;
 }
 
 @media only screen and (max-width: 768px) {
   .kataDukuh {
     flex-direction: column;
+    padding: 20px;
   }
 }
 .kataDukuh>div {
@@ -174,6 +176,12 @@ p {
   padding: 5px 0px;
 } */
 .will-fadeIn {
+  width: 100vw;
+  height: fit-content;
+  min-height: 100vh;
+  padding: 10px;
+}
+#mapNgasem {
   width: 100vw;
   height: 100vh;
 }
