--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ main {
 }
 .batas {
   background-image: url('images/batasdusunmid.jpg');
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .6) !important;
 }
 .dukuhBackground {
   background-image: url('images/dukuhBgCenter.jpg');
@@ -60,9 +61,9 @@ main {
   background-image: url('images/tentangkami/cocardKKN.jpg');
 }
 .deskripsi {
-  background-image: url('images/selfieTPA.jpg');
+  background-image: url('images/wargaNgasem.jpg');
 }
-.batas h2 {
+.batas h1 {
   font-family: 'EB Garamond', serif;
 }
 .bgImage {
