--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   /* outline: 1px solid limegreen !important; */
   
 }
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 .italic {
   font-style: italic;
 }
@@ -81,6 +85,7 @@ main {
 
 .contact {
   fill: aliceblue;
+  text-decoration: none;
 }
 
 .tebing {
@@ -146,6 +151,15 @@ main {
   width: 100%;
   height: auto;
 }
+.logo {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.logo span {
+  padding: 10px;
+}
 
 @media only screen and (max-width: 768px) {
   .kataDukuh {
@@ -155,6 +169,10 @@ main {
   .will-fadeIn>div {
     margin-top: 20px;
     margin-bottom: 20px;
+  }
+  .logo {
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 .kataDukuh>div {
@@ -231,7 +249,6 @@ p {
   width: 100vw;
   height: fit-content;
   min-height: 100vh;
-  padding: 10px;
 }
 #mapNgasem {
   width: 100vw;
