--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ dl {
 main {
   background-color: #6C757D;
 }
+article {
+  font-family: 'Times New Roman', Times, serif;
+}
 #potencyArticle {
   background-color: white;
   display: flex;
@@ -30,7 +33,8 @@ main {
 }
 .articleMain {
   color: black;
-  margin-top: 100px;
+  margin-top: 150px;
+  margin-bottom: 100px;
   width: 1000px;
   max-width: 80%;
 }
@@ -39,11 +43,11 @@ main {
   text-align: left;
 }
 .articleSection h2 {
-  font-size: large;
+  font-size: larger;
   font-weight: 600;
 }
 .articleSection p {
-  font-size: medium;
+  font-size: 1.2em;
 }
 .articleIMG{
   margin: 30px 0 30px;
